# discord-to-webhook

./: .dockerignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-publish.yml
src/: main.rs
