[package]
name = "discord-to-webhook"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-model = "0.16"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread", "signal"] }
url = "2.5"
